--- a/Java-Unit-Test/pom.xml
+++ b/Java-Unit-Test/pom.xml
@@ -39,6 +39,13 @@
 			<version>1.0.4</version>
 			<scope>test</scope>
 		</dependency>
+<!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+<dependency>
+    <groupId>org.assertj</groupId>
+    <artifactId>assertj-core</artifactId>
+    <version>3.16.1</version>
+    <scope>test</scope>
+</dependency>
 
 		<!-- <dependency> -->
 		<!-- <groupId>junit</groupId> -->
